# Parser

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.txt
doc/: ai doc.txt
src/: Architecture.cpp  Architecture.h  BasicBlock.cpp  BasicBlock.h  BinaryModule.cpp  BinaryModule.h  BinaryObject.cpp  BinaryObject.h  BinaryTypes.h  CMakeLists.txt  CapstoneDisassembler.cpp  CapstoneDisassembler.h  CrossReference.cpp  CrossReference.h  Disassembler.cpp  Disassembler.h  DotFileGenerator.cpp  DotFileGenerator.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  InstructionAnalyzer.h  JumpTableAnalyzer.cpp  JumpTableAnalyzer.h  Linker.cpp  Linker.h  Loader.cpp  Loader.h  MemoryRegion.cpp  MemoryRegion.h  Operand.h  OperandDecoder.cpp  OperandDecoder.h  PEBinaryModule.cpp  PEBinaryModule.h  Parser.cpp  Parser.h  Relocation.cpp  Relocation.h  (+7 more)
